--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
 <h2>Event Name: <%= @event.name %></h2>
-<h2> List of people signed up: <h2>
-  <h4><% @users.each do |user| %>
+<h3> Users signed up: <h3>
+
+<% if @users.empty? %>
+  <p> There are currently no signups - please check back closer to the Event Date </p>
+<% else %>
+  <p><% @users.each do |user| %>
     <li><%= user.name %></li><br>
-  <% end %></h4>
+  <% end %></p>
+<% end %>
